change portfolio to account in pojos